KEYCLOAK-630 Added Role Federation mapper. Fixes and refactoring